# llm-cli

./: $root_file  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  DATABASE_MIGRATION_GUIDE.md  README.md  REFACTORING.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  api_client.cpp  api_client.h  build.sh  camera_utils.cpp  camera_utils.h  chat_client.cpp  chat_client.h  chat_client_api.cpp  chat_client_api.h  chat_client_internal.hpp  chat_client_models.cpp  chat_client_models.h  chat_client_turn.cpp  chat_client_turn.h  cli_interface.cpp  cli_interface.h  command_handler.cpp  command_handler.h  config.h.in  curl_utils.h  database.cpp  database.h  database_fwd.h  deadlock_analysis_gui_db.md  event_dispatch.cpp  event_dispatch.h  filesystem_utils.cpp  filesystem_utils.h  font_utils.cpp  font_utils.h  (+47 more)
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  format.yml  loc.yml
.roo/: mcp.json
.roo/prompts/: flesh-out-github-issue.md  issues-to-plan.md  pick-1-github-issue-&-fix.md  pr-review-fixes.md
.roo/prompts/local/: implement-1-step.md
database/: database_core.cpp  database_core.h  message_repository.cpp  message_repository.h  model_repository.cpp  model_repository.h  session_repository.cpp  session_repository.h
doc/: refactoring-plan.md  stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md  stage-6.md  stage-7.md  stage-8.md
docs/: build-gui-plan.md  chronological-layout-algorithm.md  chronological-layout-index.md  currentFeature.md  db_path_cross_platform_plan.md  issue-1.md  issue-2.md  issue-3.md  issue-4.md  issue-5.md  issue-6.md  issue-7.md  issue-8.md  issues.md  migration_roadmap.md  phase1.md  phase2.md  phase3.md  phase4.md  productContext.md  projectBrief.md  refactor_plan.md  reviewer_checklist.md  source_tree_plan.md  stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md  step-1-data-structure.md  step-1.md  step-2-rendering.md  step-2.md  step-3-user-interaction.md  step-3.md  step-4-adding-new-messages.md  step-4.md  step-5-integration-coexistence-initial-population.md  step-5.md  step-6-integration-new-messages.md  (+2 more)
docs/chronological-layout/: api-reference.md  user-guide.md
gui_interface/: graph_types.h  gui_interface.cpp  gui_interface.h
include/graph/layout/: force_directed_layout.h  graph_layout.h
include/graph/render/: graph_renderer.h
include/graph/utils/: graph_manager.h
include/gui/views/: graph_types.h  gui_interface.h
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
resources/: noto_sans_font.h
scripts/: create_skeleton.sh  loc_report.py  refine_candidates.py
src/: dummy.cpp
src/cli/: CMakeLists.txt
src/core/: CMakeLists.txt  event_dispatch.cpp  main_gui_core.cpp
src/db/drivers/: CMakeLists.txt
src/db/stores/: CMakeLists.txt
src/graph/layout/: CMakeLists.txt  force_directed_layout.cpp  graph_layout.cpp  graph_layout_recursive.cpp  spatial_hash.cpp
src/graph/render/: CMakeLists.txt  camera_utils.cpp  graph_renderer.cpp  graph_renderer_core.cpp
src/graph/utils/: CMakeLists.txt  graph_drawing_utils.cpp  graph_manager.cpp
src/gui/render/: CMakeLists.txt  font_utils.cpp  theme_utils.cpp
src/gui/views/: CMakeLists.txt  gui_interface.cpp  main_gui_views.cpp
src/net/: CMakeLists.txt
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt  camera_utils_test.cpp  db_message_store_test.cpp  force_convergence_test.cpp  layout_force_directed_test.cpp
tools/: check_format.sh
tools_impl/: datetime_tool.cpp  datetime_tool.h  deep_research_tool.cpp  deep_research_tool.h  read_history_tool.cpp  read_history_tool.h  search_web_tool.cpp  search_web_tool.h  visit_url_tool.cpp  visit_url_tool.h  web_research_tool.cpp  web_research_tool.h
