# ---------------------------------------------------------------------------
# Placeholder CMakeLists.txt for unit-tests
#
# Phase-1 migration only requires that the core domain builds.  Proper
# test targets will be reinstated in Phase 7 (“tests refreshed”).
# ---------------------------------------------------------------------------

# Early exit so the root add_subdirectory(tests) succeeds without
# adding any targets at this stage.
return()